--- a/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
@@ -37,7 +37,7 @@
 
 {% block global_elements %}
 <div class="xui-bottomActionBar">
-  {% if not activity %}
+  {% if not survey %}
     <button class="xa-save btn btn-primary">保存</button>
     <button class="xa-preview btn btn-default ml20">预览</button>
   {% else %}
