修改店铺导航侧边导航、面包屑名称

--- a/weapp/termite2/templates/termite2/global_navbar_editor.html
+++ b/weapp/termite2/templates/termite2/global_navbar_editor.html
@@ -7,7 +7,7 @@
 	<div class="relative">
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
-			<li><a href="/termite2/pages/">店铺装修</a></li>
+			<li><a href="/mall2/outline/">首页</a></li>
 			<li><a href="/termite2/pages/">店铺导航</a></li>
 		</ul>
 	</div>
