--- a/weapp/termite2/templates/termite2/global_navbar_editor.html
+++ b/weapp/termite2/templates/termite2/global_navbar_editor.html
@@ -141,7 +141,7 @@
 
 			// 保存model
 			W.Synchronizer.manualSync(function(data) {
-				W.showHint('success', '保存底部菜单成功');
+				W.showHint('success', '保存店铺导航成功!');
 				W.projectId = data; //保存新的projectId;
 			});
 		});
