不需要物流，直接显示确认收货，而不是3天后在显示

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_list.html
@@ -113,10 +113,12 @@
 
                                         {% ifequal order.status 4 %}
                                             {% if order.express_number %}
-                                            <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}" class="xui-forPay-btn xui-logistics tc" data-id="{{order.id}}">查看物流{{order.express_number}}</a>
-                                            {% endif %}
-                                            {% if order.session_data.has_comfire_button %}
-                                            <a href="javascript:void(0);" class="xui-forPay-btn xui-receipt xa-receipt tc" data-id="{{order.id}}">确认收货</a>
+                                                <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}" class="xui-forPay-btn xui-logistics tc" data-id="{{order.id}}">查看物流{{order.express_number}}</a>
+                                                {% if order.session_data.has_comfire_button %}
+                                                <a href="javascript:void(0);" class="xui-forPay-btn xui-receipt xa-receipt tc" data-id="{{order.id}}">确认收货</a>
+                                                {% endif %}
+                                            {% else %}
+                                                <a href="javascript:void(0);" class="xui-forPay-btn xui-receipt xa-receipt tc" data-id="{{order.id}}">确认收货</a>
                                             {% endif %}
                                         {% endifequal %}
 
@@ -381,10 +383,12 @@
                                     <a href="javascript:void(0);"  class="em8 c9">实付款：<span class="em8 cRed">￥{{order.final_price}}</span></a>
                                     <span class="xui-button">
                                         {% if order.express_number %}
-                                        <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}" class="xui-forPay-btn xui-logistics tc" data-id="{{order.id}}">查看物流</a>
-                                        {% endif %}
-                                        {% if order.session_data.has_comfire_button %}
-                                        <a href="javascript:void(0);" class="xui-forPay-btn xui-receipt xa-receipt tc"  data-id="{{order.id}}">确认收货</a>
+                                            <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}" class="xui-forPay-btn xui-logistics tc" data-id="{{order.id}}">查看物流</a>
+                                                {% if order.session_data.has_comfire_button %}
+                                                <a href="javascript:void(0);" class="xui-forPay-btn xui-receipt xa-receipt tc"  data-id="{{order.id}}">确认收货</a>
+                                                {% endif %}
+                                        {% else %}
+                                            <a href="javascript:void(0);" class="xui-forPay-btn xui-receipt xa-receipt tc"  data-id="{{order.id}}">确认收货</a>
                                         {% endif %}
 
                                     </span>
