--- a/weapp/termite2/templates/termite2/global_navbar_editor.html
+++ b/weapp/termite2/templates/termite2/global_navbar_editor.html
@@ -139,9 +139,9 @@
 			event.preventDefault();
 
 			// 保存model
-			W.Synchronizer.manualSync(function(data) {
+			W.Synchronizer.manualSync(function(responseData, page) {
 				W.showHint('success', '保存底部菜单成功');
-				W.projectId = data; //保存新的projectId;
+				W.projectId = responseData; //保存新的projectId;
 			});
 		});
 
