修复 查看 出错的问题

--- a/weapp/apps/customerized_apps/survey/templates/editor/surveies.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/surveies.html
@@ -145,8 +145,8 @@
 					<a href="javascript:void(0)" class="xa-close" data-id=${item.id}>关闭</a>
 					{{/if}}
 					<a href="javascript:void(0);" class="ml5 xa-preview" data-id=${item.id}>预览</a>
-					<a href="../survey_statistics/?id=${item.id}" class="ml5">统计</a>
-					<a href="../survey_participances/?id=${item.id}" class="ml5">查看结果</a>
+					<a href="/apps/survey/survey_statistics/?id=${item.id}" class="ml5">统计</a>
+					<a href="/apps/survey/survey_participances/?id=${item.id}" class="ml5">查看结果</a>
 				</td>
 			</tr>
 			{{/each}}
