--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -325,10 +325,13 @@
                         var inputType = $control.attr('data-input-type');
                         var controlType = $control.attr('data-control-type');
                         var cid;
-                        if(controlType === 'appkit.shortcuts' || controlType === 'appkit.textlist'){
+                        var cid_temp = $control.parent().attr('data-component-cid');
+                        if(controlType === 'appkit.shortcuts'){
                             cid = $control.parents('ul').eq(0).attr('data-component-cid');
                         }else{
-                            cid = $control.parent().attr('data-component-cid');
+                            if(cid_temp != null){
+                                cid = $control.parent().attr('data-component-cid');
+                            }
                         }
                         cid = cid.length<2 ? '0'+cid : cid;
                         var name = $control.attr('data-input-name');
