--- a/weapp/mall/templates/mall/editor/model_properties.html
+++ b/weapp/mall/templates/mall/editor/model_properties.html
@@ -269,11 +269,11 @@ var ModelPropertyPage = Backbone.View.extend({
     onClickEditModelPropertyValue:function(event){
         var $tr = $(event.currentTarget).parents('tr');
         var $li = $(event.currentTarget).parents('li');
-        var propertyId = $tr.data('propertyId');
+        var propertyValueId = $li.data('value-id');
         var picUrl = $li.data('pic-url');
         var modelValue = $li.data('model-name');
         W.dialog.showDialog('W.dialog.mall.AddProductModelPropertyValueDialog', {
-                propertyId: propertyId,
+                propertyValueId: propertyValueId,
                 modelValue:modelValue,
                 picUrl:picUrl,
                 success: function(data) {
@@ -283,14 +283,14 @@ var ModelPropertyPage = Backbone.View.extend({
                         app: 'mall2',
                         api: 'model_property_value',
                         args: _.extend(data, {
-                            id: propertyId,
+                            id: propertyValueId,
                         }),
                         scope: this,
                         success: function(data) {
                             window.location.reload();
                         },
                         error: function(resp) {
-                            alert('添加规格值失败!');
+                            alert('修改规格值失败!');
                         }
                     })
                 }
