初始化 侧滑菜单 标题字数限制bug 以及 保存后刷新页面

--- a/weapp/termite2/templates/termite2/global_navbar_editor.html
+++ b/weapp/termite2/templates/termite2/global_navbar_editor.html
@@ -143,6 +143,9 @@
 			W.Synchronizer.manualSync(function(responseData, page) {
 				W.showHint('success', '保存店铺导航成功');
 				W.projectId = responseData; //保存新的projectId;
+				_.delay(function(){
+					window.location.reload();
+				}, 1000);
 			});
 		});
 
