--- a/weapp/termite2/templates/termite2/wepage_design_page.html
+++ b/weapp/termite2/templates/termite2/wepage_design_page.html
@@ -7,6 +7,7 @@
 		<link type="text/css" rel="stylesheet" href="/termite_static/v4/css/base.css">
 		<link type="text/css" rel="stylesheet" href="/termite_static/v4/css/webapp_default.css">
 		<link type="text/css" rel="stylesheet" href="/termite_static/v4/css/widget.css">
+		<link type="text/css" rel="stylesheet" href="/termite_static/css/common_widget.css">
 		<link type="text/css" rel="stylesheet" href="/termite_static/v4/css/idangerous.swiper.css">
 		<link type="text/css" rel="stylesheet" href="/termite_static/css/design.css">
 
