--- a/weapp/termite/static/termite_js/app/component/appkit/textlist/textlist.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/textlist/textlist.html
@@ -4,19 +4,17 @@
 {% ifequal component.type 'appkit.textlist' %}
 <div
     class="wui-shortcuts"
-    data-component-cid="{{component.cid}}"
     style=""
 >
 	<ul
-		class="wui-i-items xa-inputControl"
+		class="wui-i-items"
 		data-input-name="{{component.model.title}}"
-		data-input-type="textlist"
-		data-control-type="appkit.textlist"
+        data-component-cid="{{component.cid}}"
 	>
         {% if component.model.modules.name.select %}
         <li class="wui-i-item">
             <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">姓名</label>
-            <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="name" data-control-type="appkit.textlist">
+            <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="name" data-control-type="appkit.shortcuts">
                 <input
                     class="wui-i-input"
                     type="text"
@@ -30,7 +28,7 @@
         {% if component.model.modules.phone.select %}
         <li class="wui-i-item">
             <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">手机号</label>
-            <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="phone" data-control-type="appkit.textlist">
+            <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="phone" data-control-type="appkit.shortcuts">
                 <input
                     class="wui-i-input"
                     type="text"
@@ -44,7 +42,7 @@
         {% if component.model.modules.email.select %}
         <li class="wui-i-item">
             <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">邮箱</label>
-            <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="email" data-control-type="appkit.textlist">
+            <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="email" data-control-type="appkit.shortcuts">
                 <input
                     class="wui-i-input"
                     type="text"
@@ -58,7 +56,7 @@
         {% if component.model.modules.qq.select %}
             <li class="wui-i-item">
                 <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">QQ</label>
-                <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="qq" data-control-type="appkit.textlist">
+                <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="qq" data-control-type="appkit.shortcuts">
                     <input
                         class="wui-i-input"
                         type="text"
@@ -72,7 +70,7 @@
         {% if component.model.modules.job.select %}
             <li class="wui-i-item">
                 <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">职位</label>
-                <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="job" data-control-type="appkit.textlist">
+                <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="job" data-control-type="appkit.shortcuts">
                     <input
                         class="wui-i-input"
                         type="text"
@@ -86,7 +84,7 @@
         {% if component.model.modules.addr.select %}
             <li class="wui-i-item">
                 <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">地址</label>
-                <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="addr" data-control-type="appkit.textlist">
+                <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="addr" data-control-type="appkit.shortcuts">
                     <input
                         class="wui-i-input"
                         type="text"
