--- a/weapp/apps/customerized_apps/feedback/templates/editor/feedbacks.html
+++ b/weapp/apps/customerized_apps/feedback/templates/editor/feedbacks.html
@@ -14,24 +14,26 @@
 		<div class="xui-form disT">
 			<div class="xui-col disTc">
 				<div class="xui-i-item">
-					<label class="">活动名称：</label>
-					<input type="text" class="form-control" id="name" name="name" value="" />
+					<label class="">用户名：</label>
+					<input type="text" class="form-control" id="username" name="username" value="" />
 				</div>
 			</div>
 			<div class="xui-col disTc">
 				<div class="xui-i-item ml20">
-					<label>状态：</label>
-					<select class="" id="status" name="status">
+					<label>问题类型：</label>
+					<select class="" id="feedback_type" name="feedback_type">
 						<option value="-1">全部</option>
-						<option value="0">未开始</option>
-						<option value="1">进行中</option>
-						<option value="2">已结束</option>
+						<option value="0">服务</option>
+						<option value="1">功能</option>
+						<option value="2">操作</option>
+						<option value="3">新的需求</option>
+						<option value="4">其他</option>
 					</select>
 				</div>
 			</div>
 			<div class="xui-col disTc">
 				<div class="xui-i-item">
-					<label>活动时间
+					<label>反馈时间
 					：</label>
 					<input
 						type="text"
@@ -61,19 +63,34 @@
 				</div>
 			</div>
 		</div>
+		<div class="xui-form disT">
+			<div class="xui-col disTc">
+				<div class="xui-i-item">
+					<label class="">手机：</label>
+					<input type="text" class="form-control" id="tel" name="tel" value="" />
+				</div>
+			</div>
+			<div class="xui-col disTc">
+				<div class="xui-i-item ml20">
+					<label class="">姓名：</label>
+					<input type="text" class="form-control" id="name" name="name" value="" />
+				</div>
+			</div>
+			<div class="xui-col disTc">
+				<div class="xui-i-item">
+					<label class="">QQ：</label>
+					<input type="text" class="form-control" id="qq" name="qq" value="" />
+				</div>
+			</div>
+		</div>
 		<div class="xui-btn-group">
 			<a class="btn btn-primary mr40 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;询</a>
-			<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重&nbsp;&nbsp;&nbsp;置</a>
+			<a class="btn btn-default mr40 xa-reset xui-fontBold" href="javascript:void(0);">重&nbsp;&nbsp;&nbsp;置</a>
+			<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">批量导出</a>
 		</div>
 	</div>
 	
 	<div class="panel panel-default xui-tableBox">
-		<div class="panel-header clearfix">
-			<a href="/apps/feedback/feedback/" class="btn btn-success fr">
-				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建用户反馈
-			</a>
-		</div>
-		
 		<div 
 			class="panel-body panel-table p0"
 			data-ui-role="advanced-table" 
@@ -99,12 +116,11 @@
 	<table class="table table-bordered xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg mb10">
 		<thead>
 			<tr>
-				<th>名称</th>
-				<th>开始时间</th>
-				<th>结束时间</th>
-				<th>状态</th>
-				<th>参与人数</th>
-				<th>操作</th>
+				<th>用户名</th>
+				<th>联系方式</th>
+				<th>问题类型</th>
+				<th>反馈内容</th>
+				<th>反馈时间</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -121,30 +137,20 @@
 					href="/apps/feedback/feedback/?id=${item.id}&related_page_id=${item.related_page_id}"
 					style="text-overflow: -o-ellipsis-lastline;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;"
 					>
-						${item.name}
+						${item.username}
 					</a>
 				</td>
 				<td>
-					${item.start_time}
+					${item.tel}
 				</td>
 				<td>
-					${item.end_time}
+					${item.feedback_type}
 				</td>
 				<td>
-					${item.status}
+					${item.content}
 				</td>
 				<td>
-					${item.participant_count}
-				</td>
-				<td>
-					{{if (item.status === '未开启' || item.status === '已结束')}}
-					<a href="javascript:void(0)" class="xa-delete" data-id=${item.id}>删除</a>
-					{{/if}}
-					{{if (item.status === '进行中')}}
-					<a href="javascript:void(0)" class="xa-close" data-id=${item.id}>关闭</a>
-					{{/if}}
-					<a href="javascript:void(0);" class="ml5 xa-preview" data-id=${item.id}>预览</a>
-					<a href="/apps/feedback/feedback_participances/?id=${item.id}" class="ml5">查看结果</a>
+					${item.time}
 				</td>
 			</tr>
 			{{/each}}
@@ -163,90 +169,36 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-	
-	$('body').delegate('.xa-delete', 'click', function(event) {
-		var $el = $(event.target);
-		var id = $el.data('id');
-		W.requireConfirm({
-			$el: $el,
-			width: 420,
-			height: 55,
-			position: 'right-middle',
-			isTitle: false,
-			msg: '确定删除？',
-			confirm: function() {
-				W.getApi().call({
-					app: 'apps/feedback',
-					resource: 'feedback',
-					method: 'delete',
-					args: {
-						id: id
-					},
-					success: function(data) {
-						W.showHint('success', '删除数据成功！');
-						setTimeout(function() {
-							location.reload()
-						}, 500);
-					},
-					error: function(response) {
-						W.showHint('error', '删除数据失败，请稍后再试！');
-					}
-				});
-			}
-		});
-	});
-	
-	$('body').delegate('.xa-close', 'click', function(event) {
-		var $el = $(event.target);
-		var id = $el.data('id');
-		W.getApi().call({
-			app: 'apps/feedback',
-			resource: 'feedback_status',
-			method: 'post',
-			args: {
-				id: id,
-				target: 'stoped'
-			},
-			success: function(data) {
-				W.showHint('success', '更新状态成功！');
-				setTimeout(function() {
-					location.reload()
-				}, 500);
-			},
-			error: function(response) {
-				W.showHint('error', '更新状态失败，请稍后再试！');
-			}
-		});
-	});
-	
-	$('body').delegate('.xa-preview', 'click', function(event) {
-		var $el = $(event.target);
-		var id = $el.data('id');
-		var previewUrl = '/m/apps/feedback/m_feedback/?woid='+W.uid+'&id='+id;
-		window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
-	});
-	
 	$('.xa-search').click(function(event) {
-		var name = $.trim($('[name="name"]').val());
-		var status = $.trim($('[name="status"]').val());
+		var username = $.trim($('[name="username"]').val());
+		var feedback_type = $.trim($('[name="feedback_type"]').val());
 		var startTime = $.trim($('[name="start_time"]').val());
 		var endTime = $.trim($('[name="end_time"]').val());
+		var name = $.trim($('[name="name"]').val());
+		var tel = $.trim($('[name="tel"]').val());
+		var qq = $.trim($('[name="qq"]').val());
 		var table = $('[data-ui-role="advanced-table"]').data('view');
 		table.reload({
-			name: name,
-			status: status,
+			username: username,
+			feedback_type: feedback_type,
 			start_time: startTime,
-			end_time: endTime
+			end_time: endTime,
+			name: name,
+			tel: tel,
+			qq: qq
 		}, {
 			emptyDataHint: '没有符合条件的数据'
 		});
 	});
 	
 	$('.xa-reset').click(function(event) {
-		$('[name="name"]').val('');
-		$('[name="status"]').val('0');
+		$('[name="username"]').val('');
+		$('[name="feedback_type"]').val('-1');
 		$('[name="start_time"]').val('');
 		$('[name="end_time"]').val('');
+		$('[name="tel"]').val('');
+		$('[name="name"]').val('');
+		$('[name="qq"]').val('');
 	});
 
 });
