--- a/weapp/termite/static/css/common_widget.css
+++ b/weapp/termite/static/css/common_widget.css
@@ -37,34 +37,31 @@
 .wui-template-globalNavbar .xui-flex{
     text-align: center;
     line-height: 45px;
-    position: relative;
 }
 .wui-template-globalNavbar .xui-flex a{
     width: 100%;
     height: 100%;
     display: inline-block;
 }
+.wui-template-globalNavbar .xui-calc{
+    width: calc(100% - 51px);
+    width: -webkit-calc(100% - 51px);
+    position: relative;
+}
 .wui-template-globalNavbar .xui-flex-one{
-    box-flex:1;
-    -webkit-box-flex:1;
-    -moz-box-flex:1;
-    width: 1rem;
+    width: 100%;
 }
 .wui-template-globalNavbar .xui-flex-two{
-    box-flex:2;
-    -webkit-box-flex:2;
-    -moz-box-flex:2;
+    width: 50%;
+    float: left;
     border-right: 1px solid #CBCBCB;
     box-sizing:border-box;
-    width: 1rem;
 }
 .wui-template-globalNavbar .xui-flex-third{
-    box-flex:3;
-    -webkit-box-flex:3;
-    -moz-box-flex:3;
+    width:33.3%;
+    float: left;
     border-right: 1px solid #CBCBCB;
     box-sizing:border-box;
-    width: 1rem;
 }
 .wui-template-globalNavbar .xui-subMenuContainer{
     position: absolute;
@@ -100,9 +97,10 @@
 }
 .wui-template-globalNavbar .xui-globalBottomBar .xui-subMenu li{
     height: 35px;
+    line-height: 35px;
     min-width: 70px;
     padding-left: 6px;
-    padding-right: 6px;*/
+    padding-right: 6px;
     line-height: 35px;
     text-align: center;
     border-bottom: 1px solid #CBCBCB;
