--- a/weapp/templates/global_navbar.html
+++ b/weapp/templates/global_navbar.html
@@ -1,20 +1,21 @@
 {% load workbench_filter %}
 
 {% with global_navbar as component %}
-cid: {{component.cid}}
 <div 
     class="wui-template-globalNavbar"
     data-component-cid="{{component.cid}}" 
 >
+    {% if component.model.type == "weixin" %}
     <!-- 微信导航 -->
-    <div class="xui-globalBottomBar {% if component.model.type == "slide" %}xui-hide{% endif  %}" data-ui-role="bottomNav">
+    <div class="xui-globalBottomBar" data-ui-role="bottomNav">
         <div class="xui-home">
-            <a href="###" class="xui-bg"></a>
+            <a href="/workbench/jqm/preview/?workspace_id=home_page&webapp_owner_id={{request.webapp_owner_id}}&project_id=0" class="xui-bg"></a>
         </div>
-        {% for component in component.components %}
-            <div data-component-cid="{{component.cid}}" class="xui-flex xui-flex-two">
-                <div class="xui-menu xa-menu f14">
-                    <a href="{{ component.model.target|extract_target_data:request|safe }}" class="wa-inner-link">{{ component.model.title }}</a>
+        <div class="xui-calc">
+            {% for component in component.components %}
+            <div class="">
+                <div data-component-cid="{{component.cid}}" class="xui-flex xui-flex-{{component.parent_component.sub_component_count}} xui-menu xa-menu f14">
+                        <a href="{{ component.model.target|extract_target_data:request|safe }}" class="wa-inner-link">{{ component.model.title }}</a>
                 </div>
                 <div class="xui-subMenuContainer">
                     <span class="xui-menuArrow"></span>
@@ -26,11 +27,13 @@ cid: {{component.cid}}
                     </ul>
                 </div>
             </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
-    
+
+    {% else %}
     <!-- 侧滑导航 -->
-    <div class="wui-weshopSideBar {% if component.model.type == "weixin" %}xui-hide{% endif %}" data-ui-role="sideNav" {% if in_design_mode %}data-disable-switch="true" data-auto-active="product-category"{% endif %}>
+    <div class="wui-weshopSideBar" data-ui-role="sideNav" {% if in_design_mode %}data-disable-switch="true" data-auto-active="product-category"{% endif %}>
         <div class="xui-globalSideBar">
             <div class="xui-bottomNav">
                 <ul class="">
@@ -63,7 +66,7 @@ cid: {{component.cid}}
 
                 {% for component in component.components %}
                 <li class="xui-firstNav xa-firstNav" data-component-cid="{{component.cid}}"> 
-                    <a href="###">
+                    <a href="{{ component.model.target|extract_target_data:request|safe }}">
                         <span class="wa-inner-link">{{ component.model.title }}<i class="xui-leftArrow"></i></span>
                     </a>
                     <ul class="xui-subMenu">                        
@@ -75,6 +78,7 @@ cid: {{component.cid}}
                 {% endfor %}
             </ul>
         </div>
-    </div>
+    </div>    
+    {% endif %}
 </div>
 {% endwith %}
