--- a/weapp/apps/customerized_apps/vote/templates/editor/vote_participances.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/vote_participances.html
@@ -83,8 +83,10 @@
 		<div class="xui-i-col">
 			<div class="ml80">
 				<a class="btn btn-primary mr30 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;&nbsp;询</a>
-				<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">批量导出</a>
+				<a class="btn btn-default xa-export xui-fontBold" href="javascript:void(0);">批量导出</a>
 			</div>
+
+
 		</div>
 	</div>
 	
