--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -92,7 +92,7 @@
                     <ul class="wui-i-items xa-inputControl">
                         {% for select in item.values %}
                         <li class="wui-i-item">
-                            <div style="position: absolute;z-index: 999;width: 97%;height: 50px;"></div>
+                            <div class="cover_div" style="position: absolute;z-index: 999;height: 50px;"></div>
                             <label style="padding: 3px 0;" >
                                 <img class="xui-name-isSelect" src="{% if select.isSelect %} /static_v2/img/selected.png {% else %} /static_v2/img/not_select.png{% endif %}" /><span class="ml5 xa-itemTitle">{{ select.name }}</span>
                                 <span style="display: inline-block;float: right;">{{ select.per }}%</span>
@@ -125,8 +125,9 @@
 {% block js %}
     <script type="text/javascript" src="/termite_static/v3/gmu/widget/progressbar.js"></script>
     <script type="text/javascript">
-
     $(document).ready(function() {
+        var li_width = $('.wui-textSelection').find('li').css('width');
+        $('.cover_div').css('width',li_width);
         $('.progressbar').each(function(){
             $(this).progressbar({
                 initValue: $(this).attr('data-per')
